@@ -74,18 +74,20 @@ Scalar ExponentiallyDampedCosineModel::computeAsScalar(const Point & tau) const
 {
   if (tau.getDimension() != inputDimension_)
     throw InvalidArgumentException(HERE) << "In ExponentiallyDampedCosineModel::computeAsScalar: expected a shift of dimension=" << inputDimension_ << ", got dimension=" << tau.getDimension();
-  Point tauOverTheta(inputDimension_);
+  Scalar absTau = 0;
   for (UnsignedInteger i = 0; i < inputDimension_; ++i)
-    tauOverTheta[i] = tau[i] / scale_[i];
-
-  const Scalar absTau = tauOverTheta.norm();
+  {
+    const Scalar dx = tau[i] / scale_[i];
+    absTau += dx * dx;
+  }
+  absTau = sqrt(absTau);
   if (absTau <= SpecFunc::ScalarEpsilon)
-    return 1.0 + nuggetFactor_;
-  return amplitude_[0] * exp(-absTau) * cos(2.0 * M_PI * absTau);
+    return amplitude_[0] * amplitude_[0] * (1.0 + nuggetFactor_);
+  return amplitude_[0] * amplitude_[0] * exp(-absTau) * cos(2.0 * M_PI * frequency_ * absTau);
 }
 
 Scalar ExponentiallyDampedCosineModel::computeAsScalar(const Collection<Scalar>::const_iterator &s_begin,
-                                                                     const Collection<Scalar>::const_iterator &t_begin) const
+                                                       const Collection<Scalar>::const_iterator &t_begin) const
 {
   Scalar absTau = 0;
   Collection<Scalar>::const_iterator s_it = s_begin;
@@ -98,7 +100,7 @@ Scalar ExponentiallyDampedCosineModel::computeAsScalar(const Collection<Scalar>:
   absTau = sqrt(absTau);
   if (absTau <= SpecFunc::ScalarEpsilon)
     return amplitude_[0] * amplitude_[0] * (1.0 + nuggetFactor_);
-  return amplitude_[0] * amplitude_[0] * exp(-absTau) * cos(2.0 * M_PI * absTau);
+  return amplitude_[0] * amplitude_[0] * exp(-absTau) * cos(2.0 * M_PI * frequency_ * absTau);
 }
 
 /* Discretize the covariance function on a given TimeGrid */
