@@ -31,33 +31,64 @@ int main(int, char *[])
 
   try
   {
-    /* Amplitude values */
-    Point amplitude(1, 1.0);
-    /* Scale values */
-    Point scale(1, 1.0);
-    /* Frequency values */
-    Scalar frequency = 0.1;
+    {
+      /* Amplitude values */
+      Point amplitude(1, 1.0);
+      /* Scale values */
+      Point scale(1, 1.0);
+      /* Frequency values */
+      Scalar frequency = 0.1;
 
-    /* Default constructor */
-    ExponentiallyDampedCosineModel myDefautModel;
-    fullprint << "myDefautModel = " << myDefautModel << std::endl;
+      /* Default constructor */
+      ExponentiallyDampedCosineModel myDefautModel;
+      fullprint << "myDefautModel = " << myDefautModel << std::endl;
 
-    /* Second order model with parameters */
-    ExponentiallyDampedCosineModel myModel(scale, amplitude, frequency);
-    fullprint << "myModel = " << myModel << std::endl;
+      /* Second order model with parameters */
+      ExponentiallyDampedCosineModel myModel(scale, amplitude, frequency);
+      fullprint << "myModel = " << myModel << std::endl;
 
-    const Scalar timeValueOne = 1.0;
-    fullprint << "covariance matrix at t = " << timeValueOne << " : " << myModel(timeValueOne) << std::endl;
-    fullprint << "covariance matrix at t = " << -1.0 * timeValueOne << " : " << myModel(-1.0 * timeValueOne) << std::endl;
+      const Scalar timeValueOne = 1.0;
+      fullprint << "covariance matrix at t = " << timeValueOne << " : " << myModel(timeValueOne) << std::endl;
+      fullprint << "covariance matrix at t = " << -1.0 * timeValueOne << " : " << myModel(-1.0 * timeValueOne) << std::endl;
 
-    /* Evaluation at time higher to check the decrease of the exponentiallyDampedCosine values */
-    const Scalar timeValueHigh = 4.0;
-    fullprint << "covariance matrix at t = "  << timeValueHigh << " : " << myModel(timeValueHigh) << std::endl;
+      /* Evaluation at time higher to check the decrease of the exponentiallyDampedCosine values */
+      const Scalar timeValueHigh = 4.0;
+      fullprint << "covariance matrix at t = " << timeValueHigh << " : " << myModel(timeValueHigh) << std::endl;
 
-    /* Discretize the process on a small time grid */
-    RegularGrid timeGrid(0.0, 1.0 / 3.0, 4);
-    fullprint << "discretized covariance over the time grid=" << timeGrid << " is" << std::endl;
-    fullprint << myModel.discretize(timeGrid) << std::endl;
+      /* Discretize the process on a small time grid */
+      RegularGrid timeGrid(0.0, 1.0 / 3.0, 4);
+      fullprint << "discretized covariance over the time grid=" << timeGrid << " is" << std::endl;
+      fullprint << myModel.discretize(timeGrid) << std::endl;
+    }
+    {
+      /* Amplitude values */
+      Point amplitude(1, 1.0);
+      /* Scale values */
+      Point scale(1, 1.0);
+      /* Frequency values */
+      Scalar frequency = 0.2;
+
+      /* Default constructor */
+      ExponentiallyDampedCosineModel myDefautModel;
+      fullprint << "myDefautModel = " << myDefautModel << std::endl;
+
+      /* Second order model with parameters */
+      ExponentiallyDampedCosineModel myModel(scale, amplitude, frequency);
+      fullprint << "myModel = " << myModel << std::endl;
+
+      const Scalar timeValueOne = 1.0;
+      fullprint << "covariance matrix at t = " << timeValueOne << " : " << myModel(timeValueOne) << std::endl;
+      fullprint << "covariance matrix at t = " << -1.0 * timeValueOne << " : " << myModel(-1.0 * timeValueOne) << std::endl;
+
+      /* Evaluation at time higher to check the decrease of the exponentiallyDampedCosine values */
+      const Scalar timeValueHigh = 4.0;
+      fullprint << "covariance matrix at t = " << timeValueHigh << " : " << myModel(timeValueHigh) << std::endl;
+
+      /* Discretize the process on a small time grid */
+      RegularGrid timeGrid(0.0, 1.0 / 3.0, 4);
+      fullprint << "discretized covariance over the time grid=" << timeGrid << " is" << std::endl;
+      fullprint << myModel.discretize(timeGrid) << std::endl;
+    }
   }
   catch (TestFailed & ex)
   {
