@@ -78,8 +78,8 @@ dCov (FD)= class=Point name=Unnamed dimension=2 values=[0.025065,0.0438639]
 dCov/dP= [[ 0.05013 ]
  [ 0.1535  ]
  [ 0.04446 ]]
-myDefautModel =  class=ExponentiallyDampedCosineModel(scale=[2], amplitude=[3], frequency=1.5)
-myModel =  class=ExponentiallyDampedCosineModel(scale=[2], amplitude=[3], frequency=1.5)
+myDefautModel =  class=ExponentiallyDampedCosineModel(scale=[2], amplitude=[3], frequency=1)
+myModel =  class=ExponentiallyDampedCosineModel(scale=[2], amplitude=[3], frequency=1)
 active= [0,1]
 parameter= [2,3]
 parameterDescription= [scale_0,amplitude_0]
@@ -88,7 +88,7 @@ dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=
 dCov (FD)= class=Point name=Unnamed dimension=1 values=[0.60895]
 dCov/dP= [[ 1.218 ]
  [ 0.812 ]]
-myModel =  class=ExponentiallyDampedCosineModel(scale=[2,2], amplitude=[3], frequency=1.5)
+myModel =  class=ExponentiallyDampedCosineModel(scale=[2,2], amplitude=[3], frequency=1)
 active= [0,1,2]
 parameter= [2,2,3]
 parameterDescription= [scale_0,scale_1,amplitude_0]
@@ -103,21 +103,21 @@ myModel =  SphericalModel(scale=[2], amplitude=[3], radius=4.5)
 active= [0,1]
 parameter= [2,3]
 parameterDescription= [scale_0,amplitude_0]
-myModel( [-1] ,  [3] )= class=SquareMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1.13169]
-dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.401235]
-dCov (FD)= class=Point name=Unnamed dimension=1 values=[0.401235]
-dCov/dP= [[ 0.8025 ]
- [ 0.3772 ]]
+myModel( [-1] ,  [3] )= class=SquareMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[3.39506]
+dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[1.2037]
+dCov (FD)= class=Point name=Unnamed dimension=1 values=[1.2037]
+dCov/dP= [[ 2.407 ]
+ [ 2.263 ]]
 myModel =  SphericalModel(scale=[2,2], amplitude=[3], radius=4.5)
 active= [0,1,2]
 parameter= [2,2,3]
 parameterDescription= [scale_0,scale_1,amplitude_0]
-myModel( [-1,-2] ,  [3,5] )= class=SquareMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.0471566]
-dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=2 columns=1 values=[0.0490014,0.0857524]
-dCov (FD)= class=Point name=Unnamed dimension=2 values=[0.0490015,0.0857528]
-dCov/dP= [[ 0.098   ]
- [ 0.3001  ]
- [ 0.01572 ]]
+myModel( [-1,-2] ,  [3,5] )= class=SquareMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.14147]
+dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=2 columns=1 values=[0.147004,0.257257]
+dCov (FD)= class=Point name=Unnamed dimension=2 values=[0.147004,0.257258]
+dCov/dP= [[ 0.294   ]
+ [ 0.9004  ]
+ [ 0.09431 ]]
 myDefautModel =  FractionalBrownianMotionModel(scale=[2], amplitude=[3], exponent=[0.25])
 myModel =  FractionalBrownianMotionModel(scale=[2], amplitude=[3], exponent=[0.25])
 active= [0,1]
@@ -132,12 +132,12 @@ myModel =  SphericalModel(scale=[2,2], amplitude=[3], radius=4.5)
 active= [0,1,2]
 parameter= [2,2,3]
 parameterDescription= [scale_0,scale_1,amplitude_0]
-myModel( [-1,-2] ,  [3,5] )= class=SquareMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.0471566]
-dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=2 columns=1 values=[0.0490014,0.0857524]
-dCov (FD)= class=Point name=Unnamed dimension=2 values=[0.0490015,0.0857528]
-dCov/dP= [[ 0.098   ]
- [ 0.3001  ]
- [ 0.01572 ]]
+myModel( [-1,-2] ,  [3,5] )= class=SquareMatrix dimension=1 implementation=class=MatrixImplementation name=Unnamed rows=1 columns=1 values=[0.14147]
+dCov = class=Matrix implementation=class=MatrixImplementation name=Unnamed rows=2 columns=1 values=[0.147004,0.257257]
+dCov (FD)= class=Point name=Unnamed dimension=2 values=[0.147004,0.257258]
+dCov/dP= [[ 0.294   ]
+ [ 0.9004  ]
+ [ 0.09431 ]]
 myDefautModel =  DiracCovarianceModel(t)=[[ 1 ]] * t==[0]
 myModel =  DiracCovarianceModel(t)=[[ 1 ]] * t==[0]
 active= [0]
