@@ -1,9 +1,18 @@
 myDefautModel =  class=ExponentiallyDampedCosineModel(scale=[1], amplitude=[1], frequency=1)
 myModel =  class=ExponentiallyDampedCosineModel(scale=[1], amplitude=[1], frequency=0.1)
-covariance matrix at t =  1.0  :  [[ 0.367879 ]]
-covariance matrix at t =  -1.0  :  [[ 0.367879 ]]
+covariance matrix at t =  1.0  :  [[ 0.297621 ]]
+covariance matrix at t =  -1.0  :  [[ 0.297621 ]]
+covariance matrix at t =  15.0  :  [[ -3.05902e-07 ]]
+discretized covariance over the time grid= RegularGrid(start=0, step=0.333333, n=4) is= [[ 1        0.700873 0.46903  0.297621 ]
+ [ 0.700873 1        0.700873 0.46903  ]
+ [ 0.46903  0.700873 1        0.700873 ]
+ [ 0.297621 0.46903  0.700873 1        ]]
+myDefautModel =  class=ExponentiallyDampedCosineModel(scale=[1], amplitude=[1], frequency=1)
+myModel =  class=ExponentiallyDampedCosineModel(scale=[1], amplitude=[1], frequency=0.2)
+covariance matrix at t =  1.0  :  [[ 0.113681 ]]
+covariance matrix at t =  -1.0  :  [[ 0.113681 ]]
 covariance matrix at t =  15.0  :  [[ 3.05902e-07 ]]
-discretized covariance over the time grid= RegularGrid(start=0, step=0.333333, n=4) is= [[  1        -0.358266 -0.256709  0.367879 ]
- [ -0.358266  1        -0.358266 -0.256709 ]
- [ -0.256709 -0.358266  1        -0.358266 ]
- [  0.367879 -0.256709 -0.358266  1        ]]
+discretized covariance over the time grid= RegularGrid(start=0, step=0.333333, n=4) is= [[ 1        0.654584 0.343543 0.113681 ]
+ [ 0.654584 1        0.654584 0.343543 ]
+ [ 0.343543 0.654584 1        0.654584 ]
+ [ 0.113681 0.343543 0.654584 1        ]]
